# akcharguesser

./: .gitignore  Cargo.toml  README.md
src/: fetch_char_data.rs  main.rs  util.rs
