[package]
name = "akcharguesser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "tracing-log"] }
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-standby = "0.16.0"
